--- a/style.scss
+++ b/style.scss
@@ -30,8 +30,9 @@ main {
     flex-direction: column;
     align-items: flex-end;
     justify-content: flex-end;
-    background-image: url("images/background.png");
+    background-image: url("images/sfondo.png");
     position: relative;
+    border-radius: 30px;
     width: 550px;
     height: 700px;
     background-repeat: no-repeat;
@@ -71,8 +72,8 @@ main {
     display: flex;
     position: absolute;
     display: none;
-    top: 70px;
-    right: 60px;
+    top: 40px;
+    right:45px;
     align-items: center;
     justify-content: center;
     background-color: red;
@@ -85,7 +86,7 @@ main {
 
 main:hover {
     transition: 0.5s;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("images/background.png");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("images/sfondo.png");
 }
 
 main:hover .btn {
