--- a/style.css
+++ b/style.css
@@ -41,7 +41,9 @@ main {
   display: flex;
   align-items: flex-end;
   justify-content: space-evenly;
+  position: absolute;
   margin: 0 60px 20px 20px;
+  bottom: -60px;
 }
 
 .btn {
@@ -49,7 +51,7 @@ main {
   align-items: center;
   justify-content: center;
   background-color: white;
-  display: none;
+  visibility: hidden;
   opacity: 0.7;
   margin: 10px;
   font-size: 20px;
@@ -65,8 +67,8 @@ main {
 .save {
   display: flex;
   position: absolute;
-  display: none;
-  top: 40px;
+  visibility: hidden;
+  top: -10px;
   right: 45px;
   align-items: center;
   justify-content: center;
@@ -77,14 +79,17 @@ main {
 }
 
 main:hover {
-  transition: 0.5s;
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("images/sfondo.png");
 }
 
 main:hover .btn {
-  display: flex;
+  visibility: visible;
+  transform: translateY(-50px);
+  transition: 1s;
 }
 
 main:hover .save {
-  display: flex;
+  visibility: visible;
+  transform: translateY(40px);
+  transition: 1s;
 }/*# sourceMappingURL=style.css.map */
